--- a/LibraryManagement.csproj
+++ b/LibraryManagement.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dasboard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dasboard.Designer.cs">
+      <DependentUpon>Dasboard.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
